# usesend-rs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  PLAN.md  README.md  USAGE.md
.github/workflows/: ci.yml
usesend/: Cargo.toml
usesend-api/: Cargo.toml
usesend-api/src/: client.rs  config.rs  error.rs  lib.rs  retry.rs
usesend-api/src/services/: campaigns.rs  contact_books.rs  contacts.rs  domains.rs  emails.rs  mod.rs
usesend-api/src/types/: campaign.rs  contact.rs  contact_book.rs  domain.rs  email.rs  mod.rs
usesend-api/tests/: types_test.rs
usesend/src/: campaigns.rs  client.rs  contact_books.rs  contacts.rs  domains.rs  emails.rs  lib.rs
