[workspace]
members = ["usesend-api", "usesend"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["AprilNEA <aea@aprilnea.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AprilNEA/usesend-rs"
homepage = "https://github.com/AprilNEA/usesend-rs"
rust-version = "1.85"

[workspace.dependencies]
bon = "3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
