[package]
name = "usesend-api"
description = "Low-level typed API client for useSend — an open-source Resend alternative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../README.md"
keywords = ["email", "usesend", "resend", "api-client", "sdk"]
categories = ["api-bindings", "email", "web-programming::http-client"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
governor = "0.8"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["time"] }
