[package]
name = "usesend"
description = "Ergonomic Rust SDK for useSend email service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["native-tls"]
native-tls = ["usesend-api/native-tls"]
rustls-tls = ["usesend-api/rustls-tls"]

[dependencies]
usesend-api = { path = "../usesend-api", default-features = false }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
