[package]
name = "usesend"
description = "Ergonomic Rust SDK for useSend — an open-source Resend alternative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "../README.md"
keywords = ["email", "usesend", "resend", "api", "sdk"]
categories = ["api-bindings", "email", "web-programming::http-client"]

[features]
default = ["rustls-tls"]
native-tls = ["usesend-api/native-tls"]
rustls-tls = ["usesend-api/rustls-tls"]

[dependencies]
usesend-api = { version = "0.1.0", path = "../usesend-api", default-features = false }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
